# rvcpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: standalone.yml
documentation/: CMakeLists.txt
include/rvcpp/: cpu.h  helper.h  instruction.h  machine.h  memory.h  registers.h
source/: cpu.cpp  instruction.cpp  machine.cpp  memory.cpp  registers.cpp
source/opcode_handlers/: 0000011.cpp  0010011.cpp  0010111.cpp  0100011.cpp  0110011.cpp  0110111.cpp  1100011.cpp  1100111.cpp  1101111.cpp  not_implemented.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: cpu.cpp  example_programs.cpp  instruction.cpp  memory.cpp  registers.cpp  version.cpp
